--- a/manifest.json
+++ b/manifest.json
@@ -1,19 +1,18 @@
 {
   "name": "Akademi Crypto",
   "short_name": "AkademiCrypto",
-  "description": "Aplikasi pembelajaran crypto terbaik",
-  "start_url": "/",
+  "start_url": "/test/",
   "display": "standalone",
-  "background_color": "#000000",
+  "background_color": "#121212",
   "theme_color": "#4B0082",
   "icons": [
     {
-      "src": "images/logo-192x192.png",
+      "src": "/test/images/logo-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "images/logo-512x512.png",
+      "src": "/test/images/logo-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
