--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,18 @@
 {
   "name": "Akademi Crypto",
-  "short_name": "Akademi Crypto",
-  "start_url": "https://dikamaulanada.github.io/test/",
+  "short_name": "AkademiCrypto",
+  "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#121212",
   "theme_color": "#4B0082",
   "icons": [
     {
-      "src": "/test/images/logo-192x192.png",
+      "src": "images/logo-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/test/images/logo-512x512.png",
+      "src": "images/logo-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
